优化似乎是没有效果的，内存运算已经很快了，优化的方面有些有限